[B]3.6.0[/B]
- Added more zoom values and removed unnecessary weather updating, added support for skin Eunique and KOver

[B]3.5.0[/B]
- Added zoom effect for increasing text and icons

[B]3.4.0[/B]
- Fixed some xml loading bugs

[B]3.3.0[/B]
- Added fixed position

[B]3.2.0[/B]
- Fixed the sorting bug for slideshow

[B]3.1.0[/B]
- Added support for OSMC skin

[B]3.0.0[/B]
- Added bounce effect for on screen movement

[B]2.9.0[/B]
- Removed xbmc.sleep and added monitor.waitForAbort

[B]2.8.0[/B]
- Changed the way screensaver deals with custom xml files

[B]2.7.0[/B]
- Added support for text shadow color

[B]2.6.0[/B]
- Added support for Chroma skin

[B]2.5.0[/B]
- Added weather icon support (Thanks to Mario and the rest of Titan skin crew)

[B]2.4.0[/B]
- Added skin.custom for skin developers and skin.default for skins that are not directly supported

[B]2.3.0[/B]
- Added weather information and reworked current options

[B]2.2.0[/B]
- Added now playing information options

[B]2.1.0[/B]
- Setting up the screensaver so it works with most of the skins

[B]2.0.0[/B]
- Added random option for transparency

[B]1.9.0[/B]
- Added random option for colors

[B]1.8.0[/B]
- Added random option for slideshow

[B]1.7.0[/B]
- Added slideshow

[B]1.6.0[/B]
- Added transparency for date

[B]1.5.0[/B]
- Added transparency for time

[B]1.4.0[/B]
- Added date colors

[B]1.3.0[/B]
- Added time colors

[B]1.2.0[/B]
- Added date format

[B]1.1.0[/B]
- Added time format

[B]1.0.0[/B]
- Initial version