@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="screensaver.digitalclock"
         name="Digital Clock Screensaver"
-        version="3.6.0"
+        version="3.7.0"
         provider-name="Vojislav Vlasic">
         <requires>
         	<import addon="xbmc.python" version="2.20.0"/>
